
show_projection_diff() can plot vectorfields with multiple distances
And the mrcal-show-projections-diff tool. Same as with heat maps, we plot the
diff for the first distance

show_projection_uncertainty_vs_distance() has distance_min, distance_max,
observed_pixel_uncertainty args. To control the plot better. The defaults are
None, autodetecting the ranges, input uncertainty, so the default behavior does
not change

show_residuals_board_observation() reports iobservation_from_worst in its title
Applies to the mrcal-show-residuals-board-observation tool as well. Makes it
simple to regenerate specific plots, even if they were displayed out of order

mrcal-show-residuals-board-observation has --from-glob

** Image i/o
save_image() can write 16bpp grayscale images properly
This requires a more recent libfreeimage than is available on some OSs

** calibration seed bug fix
estimate_monocular_calobject_poses_Rt_tocam() ignores invalid input points
This makes calibrating given incomplete chessboard observations work properly

** generic API updates
mrcal.optimize(), mrcal.optimizer_callback(): all arguments are keyword-only,
most arguments are optional

measurement_index_....() all return <0 if those measurements aren't present

Added mrcal.make_perfect_observations()

ref_calibration_object() can return the position of ANY point on the chessboard
Not just the chessboard corners.

mrcal-convert-lensmodel has --cbmax

residuals_chessboard() argument rename: i_cam -> icam_intrinsics
For consistency. Old argument still accepted for compatibility

residuals_chessboard() has new return_observations argument
The default return_observations=False produces the original behavior. if
return_observations: we return residuals,observations

mrcal.residuals_chessboard() returns size-0 arrays if no
chessboard or point observations respectively are present

** demo mrcal-show-model-resolution.py tool

* Migration notes 2.2 -> 2.3

mrcal_measurement_index_regularization() api changed